Bug 1368489 - Fixing TimeMarchesOn step 13, sort the tasks by "text track cue order". r=rillian.

1. Sort by TextTrack. 2. Sort by time. 3. Sort by the order of added to TextTrack.

MozReview-Commit-ID: 4nwx6U5dMpy

--HG--
extra : rebase_source : 2998c48982e40604b068ffca525691c5b69ae2cf